Add PUT & PATCH todo
