# apps/api/src/generated/spec/swagger.json
@@ -55,15 +55,6 @@
         "required": ["description", "message", "status"],
         "type": "object"
       },
-      "DeletedDTO": {
-        "properties": {
-          "id": {
-            "type": "string"
-          }
-        },
-        "required": ["id"],
-        "type": "object"
-      },
       "Pick_Todo.Exclude_keyofTodo._id__": {
         "properties": {
           "title": {
@@ -83,6 +74,15 @@
       },
       "CreateTodoDTO": {
         "$ref": "#/components/schemas/Omit_Todo._id_"
+      },
+      "DeletedDTO": {
+        "properties": {
+          "id": {
+            "type": "string"
+          }
+        },
+        "required": ["id"],
+        "type": "object"
       }
     },
     "securitySchemes": {}
@@ -193,6 +193,94 @@
             }
           }
         ]
+      },
+      "patch": {
+        "operationId": "Patch",
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "anyOf": [
+                    {
+                      "$ref": "#/components/schemas/Todo"
+                    },
+                    {
+                      "$ref": "#/components/schemas/ErrorMessageDTO"
+                    }
+                  ],
+                  "nullable": true
+                }
+              }
+            }
+          }
+        },
+        "security": [],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "todoId",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateTodoDTO"
+              }
+            }
+          }
+        }
+      },
+      "put": {
+        "operationId": "Replace",
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "anyOf": [
+                    {
+                      "$ref": "#/components/schemas/Todo"
+                    },
+                    {
+                      "$ref": "#/components/schemas/ErrorMessageDTO"
+                    }
+                  ],
+                  "nullable": true
+                }
+              }
+            }
+          }
+        },
+        "security": [],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "todoId",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateTodoDTO"
+              }
+            }
+          }
+        }
       },
       "delete": {
         "operationId": "Remove",
